exports[`Default`] = `
<div
  className={undefined}>
  <i
    className=" undefined bi bi-buffer" />
  <span
    className=" ">
    Buffer
  </span>
  <span
    className="">
    
  </span>
</div>
`;

exports[`Subtitle`] = `
<div
  className={undefined}>
  <i
    className=" undefined bi bi-buffer" />
  <span
    className=" ">
    Buffer
  </span>
  <span
    className="">
     NavBar
  </span>
</div>
`;
